<resources>
    <string name="app_name">MedicineRemind</string>
    <string name="save">Save</string>
    <string name="medicine">Medicine</string>
    <string name="quote">:</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="addmedicine">AddMedicine</string>
    <string name="medicine_can_not_be_empty">Medicine can not be empty</string>
    <string name="delete">Delete</string>
    <string name="clear_all">ClearAll</string>
    <string name="_search">Search</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="search_here">Search here…</string>
    <string name="edit">Edit</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="ring">"Ringtone:%s"</string>
    <string name="medicine_alarm">Medicine Alarm</string>
    <string name="dots">:</string>
    <string name="dismiss">Dismiss</string>
    <string name="it_s_time_to_use_your_medicine">It\'s time to use your medicine</string>
</resources>