<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.add.AddFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarAddFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/addmedicine"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/coordinatorAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_ringtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/size_20sp"
        app:layout_constraintTop_toBottomOf="@id/time_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_ringtone"
        android:text="@string/select_ringtone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/txt_ringtone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtLayoutMedicine"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:hint="@string/medicine"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/btn_set_ringtone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_medicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>