<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.RingtoneActivity">

    <data>
        <variable
            name="medicineReminder"
            type="com.medicine.reminder.data.model.MedicineReminder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/size_350"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            app:cardCornerRadius="@dimen/size_15"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_medicine_alarm"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_alarm_24"
                        app:tint="@color/purple_200" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:text="@string/medicine_alarm"
                        android:textColor="@color/purple_500"
                        android:textSize="@dimen/font_20"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_alarm"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_medicine_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:textSize="@dimen/font_18"
                    android:text="@{medicineReminder.title}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cons_medicine_alarm" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_time"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_medicine_name">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:textSize="@dimen/font_45"
                        android:textStyle="bold"
                        android:text="@{String.valueOf(medicineReminder.hour)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:text="@string/dots"
                        android:textSize="@dimen/font_45"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/txt_hour"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:textSize="@dimen/font_45"
                        android:textStyle="bold"
                        android:text="@{String.valueOf(medicineReminder.min)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/dot"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_dismiss"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/dismiss"
                    android:textAllCaps="false"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/font_20"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cons_time" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>